@@ -19,9 +19,15 @@
 }}
  
 == Purpose==
+Provides a secure magic word 'usergetoption' to retrieve user options.
 
+== Usage ==
+This extension is really meant to be used with [[Extension:ParserPhase2]].
+* E.g. <code>(($#usergetoption|email|default$))</code>
 
 == Features ==
+* Options are categorized as either 'RESTRICTED' or 'UNRESTRICTED' for privacy reasons
+** User must have the 'userdetails' right to access 'RESTRICTED' options
 
 == Dependancy ==
 * [[Extension:StubManager|StubManager extension]]
@@ -32,13 +38,16 @@ To install independantly from BizzWiki:
 * Apply the following changes to 'LocalSettings.php'
 <source lang=php>
 require('extensions/StubManager.php');
-
+StubManager::createStub2(	array(	'class' 		=> 'UserTools', 
+									'classfilename'	=> $IP.'/extensions/ParserExt/UserTools/UserTools.php',
+									'mgs'			=> array( 'usergetoption' ),
+								)
+						);
 </source>
 
 == History ==
 
 == Todo ==
-* Internationalize
 
 == See Also ==
 This extension is part of the [[Extension:BizzWiki|BizzWiki Platform]].
@@ -58,22 +67,86 @@ class UserTools
 	const thisName = 'UserTools';
 	const thisType = 'other';
 
+	const RESTRICTED   = 0;
+	const UNRESTRICTED = 1;
+
+	static $options = array(
+								// require special treatment
+								'email'			=> self::RESTRICTED,
+								'realname'		=> self::RESTRICTED,
+								'authtimestamp'	=> self::RESTRICTED,
+								'datepref'		=> self::UNRESTRICTED,
+
+								// can be retrieved through 'User::getOption'
+								'language'		=> self::UNRESTRICTED,
+								'variant'		=> self::UNRESTRICTED,
+								'disablemail'	=> self::UNRESTRICTED,
+								'nickname'		=> self::UNRESTRICTED,
+								'quickbar'		=> self::UNRESTRICTED,
+								'skin'			=> self::UNRESTRICTED,																
+								'math'			=> self::UNRESTRICTED,
+								'rows'			=> self::UNRESTRICTED,
+								'cols'			=> self::UNRESTRICTED,								
+								'stubthreshold'	=> self::UNRESTRICTED,																
+								'timecorrection'=> self::UNRESTRICTED,
+								'searchlimit'	=> self::UNRESTRICTED,
+								'contextlines'	=> self::UNRESTRICTED,
+								'contextchars'	=> self::UNRESTRICTED,																								
+								'imagesize'		=> self::UNRESTRICTED,																								
+								'thumbsize'		=> self::UNRESTRICTED,
+								'rclimit'		=> self::UNRESTRICTED,
+								'rcdays'		=> self::UNRESTRICTED,
+								'wllimit'		=> self::UNRESTRICTED,
+								'underline'		=> self::UNRESTRICTED,
+								'watchlistdays'	=> self::UNRESTRICTED,
+							);
+
 	public function __construct() {}
 	
 	/**
-	 */
-	public function mg_userlanguage( &$parser )
-	{ 
-		global $wgUser;
-		return $wgUser->getOption( 'language' );
-	}
-	/**
 	
 	 */
-	public function mg_usergetoption( &$parser, $whichOption )
+	public function mg_usergetoption( &$parser, $whichOption, $default = null )
 	{
 		global $wgUser;
-		return $wgUser->getOption( $whichOption, '' );
+		
+		// if the option is marked 'restricted', make sure
+		// the current user has the right to access the requested 'option'
+		if ($this->isRestricted( $option ))
+			if (!$wgUser->isAllowed('userdetails'))	
+				return null;
+
+		return $this->getOption( $wgUser, $whichOption, $default );
+	}
+	/**
+		Returns 'true' (restricted) if the option is not found.
+	 */
+	private function isRestricted( &$option )
+	{
+		if (isset( self::$options[ $option ] ))
+			$r = self::$options[ $option ];
+		else
+			return true;
+			
+		return ($r == self::RESTRICTED) ? true:false;
+	}
+	public function getOption( &$user, &$option, $default = null )
+	{
+		switch( $option )
+		{
+			case 'email':
+				return $user->getEmail();
+			case 'realname':
+				return $user->getRealName();
+			case 'authtimestamp':
+				return $user->getEmailAuthenticationtimestamp();
+			case 'datepref':
+				return $user->getDatePreference();
+			default:
+				return $user->getOption( $option, $default );
+		}
+
+		return null; // calms PHP			
 	}
 	
 } // end class
