@@ -227,3 +227,4 @@ REL1_10_11: (released ...)
 - Adjusted 'SecureHTML' for removing dependancy on ExtensionClass. Made 'stub'-enabled
 - Added 'SkinTools' extension
 - Added 'UserTools' extension
+- New right 'userdetails'
